bk_ida/gobmkida/c0/compute_escape_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/engine/influence.c:2006:6: error: use of undeclared identifier 'compute_escape_influence_cached_board'
if ( compute_escape_influence_cached_board[ii] != board[ii] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/engine/influence.c:2008:1: error: use of undeclared identifier 'compute_escape_influence_cached_board'
compute_escape_influence_cached_board[ii] = board[ii]; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/engine/influence.c:2015:1: error: use of undeclared identifier 'compute_escape_influence_active_caches'
compute_escape_influence_active_caches[k] = 0; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/engine/influence.c:2017:6: error: use of undeclared identifier 'compute_escape_influence_active_caches'
if ( compute_escape_influence_active_caches[color == 1] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/engine/influence.c:2022:21: error: use of undeclared identifier 'compute_escape_influence_escape_values'
escape_value[iia] = compute_escape_influence_escape_values[2 * iia + ( color == 1)]; 
                    ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/engine/influence.c:2055:1: error: use of undeclared identifier 'compute_escape_influence_escape_values'
compute_escape_influence_escape_values[2 * iic + ( color == 1)] = escape_value[iic]; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/engine/influence.c:2057:1: error: use of undeclared identifier 'compute_escape_influence_active_caches'
compute_escape_influence_active_caches[color == 1] = 1; 
^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/compute_escape_influence/src/obj/1/influence.o] Error 1
